# internal/infra/persistence/gorm/model/models.go
@@ -6,7 +6,7 @@ func Models() []any {
 		&ResearchTeam{}, &ResearchTeamRole{},
 		&MarketSymbol{}, &DailyBar{}, &RealtimeQuote{}, &WatchlistItem{},
 		&PredictionEvent{}, &PredictionMarket{}, &PredictionMarketQuote{}, &PredictionMarketMatch{}, &PredictionWatchlistItem{},
-		&MessageSubscriptionFilter{}, &MessageSubscription{}, &MessageSubscriptionResearchTeam{}, &IngestedMessage{}, &PlatformAdapter{},
+		&MessageSubscriptionFilter{}, &MessageSubscription{}, &MessageSubscriptionAssignment{}, &IngestedMessage{}, &IngestedMessageFilterResult{}, &PlatformAdapter{},
 		&TelegramChannel{}, &TelegramMessage{},
 		&Meeting{}, &MeetingEvent{}, &MeetingReference{}, &ToolCallLog{}, &WakePlan{},
 		&RiskConfig{}, &PaperAccount{}, &PaperOrder{}, &PaperPosition{}, &PaperFill{}, &PaperEquitySnapshot{}, &PaperCorporateAction{},
